--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -8144,7 +8144,7 @@ a {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    color: #f35588; }
+    color: #FF9F9F; }
 a:hover, a:focus {
     text-decoration: none !important;
     outline: none !important;
@@ -8159,7 +8159,7 @@ h1, h2, h3, h4, h5,
     color: #000; }
 
 .bg-primary {
-    background: #f35588 !important; }
+    background: #FF9F9F !important; }
 
 .ftco-section {
     padding: 7em 0; }
@@ -8194,15 +8194,15 @@ h1, h2, h3, h4, h5,
 
 .text-wrap {
     background: #f75959;
-    background: -moz-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #f35587));
-    background: -webkit-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -o-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -ms-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -webkit-linear-gradient(315deg, #f75959 0%, #f35587 100%);
-    background: -o-linear-gradient(315deg, #f75959 0%, #f35587 100%);
-    background: linear-gradient(135deg, #f75959 0%, #f35587 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#f35587', GradientType=1 );
+    background: -moz-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #E97777));
+    background: -webkit-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -o-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -ms-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -webkit-linear-gradient(315deg, #f75959 0%, #E97777 100%);
+    background: -o-linear-gradient(315deg, #f75959 0%, #E97777 100%);
+    background: linear-gradient(135deg, #f75959 0%, #E97777 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#E97777', GradientType=1 );
     color: #fff; }
 .text-wrap .text h2 {
     font-weight: 900;
@@ -8278,7 +8278,7 @@ h1, h2, h3, h4, h5,
 .social-media .social-icon span {
     color: #999999; }
 .social-media .social-icon:hover, .social-media .social-icon:focus {
-    background: #f35588; }
+    background: #FF9F9F; }
 .social-media .social-icon:hover span, .social-media .social-icon:focus span {
     color: #fff; }
 
@@ -8335,9 +8335,9 @@ h1, h2, h3, h4, h5,
 
 /* Style the checkmark/indicator */
 .checkbox-primary {
-    color: #f35588; }
+    color: #FF9F9F; }
 .checkbox-primary input:checked ~ .checkmark:after {
-    color: #f35588; }
+    color: #FF9F9F; }
 
 .btn {
     cursor: pointer;
@@ -8349,30 +8349,30 @@ h1, h2, h3, h4, h5,
 .btn:hover, .btn:active, .btn:focus {
     outline: none; }
 .btn.btn-primary {
-    background: #f35588;
-    border: 1px solid #f35588;
+    background: #FF9F9F;
+    border: 1px solid #FF9F9F;
     color: #fff;
     background: #f75959;
-    background: -moz-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #f35587));
-    background: -webkit-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -o-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -ms-linear-gradient(-45deg, #f75959 0%, #f35587 100%);
-    background: -webkit-linear-gradient(315deg, #f75959 0%, #f35587 100%);
-    background: -o-linear-gradient(315deg, #f75959 0%, #f35587 100%);
-    background: linear-gradient(135deg, #f75959 0%, #f35587 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#f35587', GradientType=1 ); }
+    background: -moz-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #E97777));
+    background: -webkit-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -o-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -ms-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
+    background: -webkit-linear-gradient(315deg, #f75959 0%, #E97777 100%);
+    background: -o-linear-gradient(315deg, #f75959 0%, #E97777 100%);
+    background: linear-gradient(135deg, #f75959 0%, #E97777 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#E97777', GradientType=1 ); }
 .btn.btn-primary:hover {
-    border: 1px solid #f35588;
-    background: #f35588;
+    border: 1px solid #FF9F9F;
+    background: #FF9F9F;
     color: #fff; }
 .btn.btn-primary.btn-outline-primary {
-    border: 1px solid #f35588;
+    border: 1px solid #FF9F9F;
     background: transparent;
-    color: #f35588; }
+    color: #FF9F9F; }
 .btn.btn-primary.btn-outline-primary:hover {
     border: 1px solid transparent;
-    background: #f35588;
+    background: #FF9F9F;
     color: #fff; }
 .btn.btn-white {
     background: #fff;
