--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -8193,16 +8193,16 @@ h1, h2, h3, h4, h5,
         width: 100%; } }
 
 .text-wrap {
-    background: #f75959;
-    background: -moz-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #E97777));
-    background: -webkit-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -o-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -ms-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -webkit-linear-gradient(315deg, #f75959 0%, #E97777 100%);
-    background: -o-linear-gradient(315deg, #f75959 0%, #E97777 100%);
-    background: linear-gradient(135deg, #f75959 0%, #E97777 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#E97777', GradientType=1 );
+    background: #f87272;
+    background: -moz-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f87272), color-stop(100%, #f69292));
+    background: -webkit-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -o-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -ms-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -webkit-linear-gradient(315deg, #f87272 0%, #f69292 100%);
+    background: -o-linear-gradient(315deg, #f87272 0%, #f69292 100%);
+    background: linear-gradient(135deg, #f87272 0%, #f69292 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f87272', endColorstr='#f69292', GradientType=1 );
     color: #fff; }
 .text-wrap .text h2 {
     font-weight: 900;
@@ -8352,16 +8352,16 @@ h1, h2, h3, h4, h5,
     background: #FF9F9F;
     border: 1px solid #FF9F9F;
     color: #fff;
-    background: #f75959;
-    background: -moz-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f75959), color-stop(100%, #E97777));
-    background: -webkit-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -o-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -ms-linear-gradient(-45deg, #f75959 0%, #E97777 100%);
-    background: -webkit-linear-gradient(315deg, #f75959 0%, #E97777 100%);
-    background: -o-linear-gradient(315deg, #f75959 0%, #E97777 100%);
-    background: linear-gradient(135deg, #f75959 0%, #E97777 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75959', endColorstr='#E97777', GradientType=1 ); }
+    background: #f87272;
+    background: -moz-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, #f87272), color-stop(100%, #f69292));
+    background: -webkit-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -o-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -ms-linear-gradient(-45deg, #f87272 0%, #f69292 100%);
+    background: -webkit-linear-gradient(315deg, #f87272 0%, #f69292 100%);
+    background: -o-linear-gradient(315deg, #f87272 0%, #f69292 100%);
+    background: linear-gradient(135deg, #f87272 0%, #f69292 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f87272', endColorstr='#f69292', GradientType=1 ); }
 .btn.btn-primary:hover {
     border: 1px solid #FF9F9F;
     background: #FF9F9F;
