--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1588,10 +1588,10 @@ pre code {
 .table-responsive > .table-bordered {
     border: 0; }
 
-.form-control {
-    display: block;
-    width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
+.form-control2 {
+    display: inline-block;
+    width: 1000px;
+    height: calc(1.5em + 0.75rem + 10px);
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -1607,42 +1607,46 @@ pre code {
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out; }
 @media (prefers-reduced-motion: reduce) {
-    .form-control {
+    .form-control2 {
         -webkit-transition: none;
         -o-transition: none;
         transition: none; } }
-.form-control::-ms-expand {
+.form-control2::-ms-expand {
     background-color: transparent;
     border: 0; }
-.form-control:focus {
+.form-control:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #495057;
+}
+.form-control2:focus {
     color: #495057;
     background-color: #fff;
     border-color: #80bdff;
     outline: 0;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
-.form-control::-webkit-input-placeholder {
+.form-control2::-webkit-input-placeholder {
     color: #6c757d;
     opacity: 1; }
-.form-control:-ms-input-placeholder {
+.form-control2:-ms-input-placeholder {
     color: #6c757d;
     opacity: 1; }
-.form-control::-ms-input-placeholder {
+.form-control2::-ms-input-placeholder {
     color: #6c757d;
     opacity: 1; }
-.form-control::placeholder {
+.form-control2::placeholder {
     color: #6c757d;
     opacity: 1; }
-.form-control:disabled, .form-control[readonly] {
+.form-control2:disabled, .form-control2[readonly] {
     background-color: #e9ecef;
     opacity: 1; }
 
-select.form-control:focus::-ms-value {
+select.form-control2:focus::-ms-value {
     color: #495057;
     background-color: #fff; }
 
-.form-control-file,
-.form-control-range {
+.form-control2-file,
+.form-control2-range {
     display: block;
     width: 100%; }
 
@@ -1665,7 +1669,7 @@ select.form-control:focus::-ms-value {
     font-size: 0.875rem;
     line-height: 1.5; }
 
-.form-control-plaintext {
+.form-control2-plaintext {
     display: block;
     width: 100%;
     padding-top: 0.375rem;
@@ -1675,29 +1679,29 @@ select.form-control:focus::-ms-value {
     color: #212529;
     background-color: transparent;
     border: solid transparent;
-    border-width: 1px 0; }
-.form-control-plaintext.form-control-sm, .form-control-plaintext.form-control-lg {
+    border-width: 2px 0; }
+.form-control2-plaintext.form-control2-sm, .form-control2-plaintext.form-control2-lg {
     padding-right: 0;
     padding-left: 0; }
 
-.form-control-sm {
+.form-control2-sm {
     height: calc(1.5em + 0.5rem + 2px);
     padding: 0.25rem 0.5rem;
     font-size: 0.875rem;
     line-height: 1.5;
     border-radius: 0.2rem; }
 
-.form-control-lg {
+.form-control2-lg {
     height: calc(1.5em + 1rem + 2px);
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
     line-height: 1.5;
     border-radius: 0.3rem; }
 
-select.form-control[size], select.form-control[multiple] {
+select.form-control2[size], select.form-control2[multiple] {
     height: auto; }
 
-textarea.form-control {
+textarea.form-control2 {
     height: auto; }
 
 .form-group {
@@ -1771,23 +1775,23 @@ textarea.form-control {
     background-color: rgba(40, 167, 69, 0.9);
     border-radius: 0.25rem; }
 
-.was-validated .form-control:valid, .form-control.is-valid {
+.was-validated .form-control2:valid, .form-control2.is-valid {
     border-color: #28a745;
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
     background-position: center right calc(0.375em + 0.1875rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
-.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
+.was-validated .form-control2:valid:focus, .form-control2.is-valid:focus {
     border-color: #28a745;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25); }
-.was-validated .form-control:valid ~ .valid-feedback,
-.was-validated .form-control:valid ~ .valid-tooltip, .form-control.is-valid ~ .valid-feedback,
-.form-control.is-valid ~ .valid-tooltip {
+.was-validated .form-control2:valid ~ .valid-feedback,
+.was-validated .form-control2:valid ~ .valid-tooltip, .form-control2.is-valid ~ .valid-feedback,
+.form-control2.is-valid ~ .valid-tooltip {
     display: block; }
 
-.was-validated textarea.form-control:valid, textarea.form-control.is-valid {
+.was-validated textarea.form-control2:valid, textarea.form-control2.is-valid {
     padding-right: calc(1.5em + 0.75rem);
     background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem); }
 
@@ -1804,9 +1808,9 @@ textarea.form-control {
 .custom-select.is-valid ~ .valid-tooltip {
     display: block; }
 
-.was-validated .form-control-file:valid ~ .valid-feedback,
-.was-validated .form-control-file:valid ~ .valid-tooltip, .form-control-file.is-valid ~ .valid-feedback,
-.form-control-file.is-valid ~ .valid-tooltip {
+.was-validated .form-control2-file:valid ~ .valid-feedback,
+.was-validated .form-control2-file:valid ~ .valid-tooltip, .form-control2-file.is-valid ~ .valid-feedback,
+.form-control2-file.is-valid ~ .valid-tooltip {
     display: block; }
 
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
@@ -1872,23 +1876,23 @@ textarea.form-control {
     background-color: rgba(220, 53, 69, 0.9);
     border-radius: 0.25rem; }
 
-.was-validated .form-control:invalid, .form-control.is-invalid {
+.was-validated .form-control2:invalid, .form-control2.is-invalid {
     border-color: #dc3545;
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
     background-repeat: no-repeat;
     background-position: center right calc(0.375em + 0.1875rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
-.was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
+.was-validated .form-control2:invalid:focus, .form-control2.is-invalid:focus {
     border-color: #dc3545;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
-.was-validated .form-control:invalid ~ .invalid-feedback,
-.was-validated .form-control:invalid ~ .invalid-tooltip, .form-control.is-invalid ~ .invalid-feedback,
-.form-control.is-invalid ~ .invalid-tooltip {
+.was-validated .form-control2:invalid ~ .invalid-feedback,
+.was-validated .form-control2:invalid ~ .invalid-tooltip, .form-control2.is-invalid ~ .invalid-feedback,
+.form-control2.is-invalid ~ .invalid-tooltip {
     display: block; }
 
-.was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
+.was-validated textarea.form-control2:invalid, textarea.form-control2.is-invalid {
     padding-right: calc(1.5em + 0.75rem);
     background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem); }
 
@@ -1905,9 +1909,9 @@ textarea.form-control {
 .custom-select.is-invalid ~ .invalid-tooltip {
     display: block; }
 
-.was-validated .form-control-file:invalid ~ .invalid-feedback,
-.was-validated .form-control-file:invalid ~ .invalid-tooltip, .form-control-file.is-invalid ~ .invalid-feedback,
-.form-control-file.is-invalid ~ .invalid-tooltip {
+.was-validated .form-control2-file:invalid ~ .invalid-feedback,
+.was-validated .form-control2-file:invalid ~ .invalid-tooltip, .form-control2-file.is-invalid ~ .invalid-feedback,
+.form-control2-file.is-invalid ~ .invalid-tooltip {
     display: block; }
 
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
@@ -1992,11 +1996,11 @@ textarea.form-control {
         -ms-flex-align: center;
         align-items: center;
         margin-bottom: 0; }
-    .form-inline .form-control {
+    .form-inline .form-control2 {
         display: inline-block;
         width: auto;
         vertical-align: middle; }
-    .form-inline .form-control-plaintext {
+    .form-inline .form-control2-plaintext {
         display: inline-block; }
     .form-inline .input-group,
     .form-inline .custom-select {
@@ -2836,8 +2840,8 @@ input[type="button"].btn-block {
     -ms-flex-align: stretch;
     align-items: stretch;
     width: 100%; }
-.input-group > .form-control,
-.input-group > .form-control-plaintext,
+.input-group > .form-control2,
+.input-group > .form-control2-plaintext,
 .input-group > .custom-select,
 .input-group > .custom-file {
     position: relative;
@@ -2846,30 +2850,30 @@ input[type="button"].btn-block {
     flex: 1 1 auto;
     width: 1%;
     margin-bottom: 0; }
-.input-group > .form-control + .form-control,
-.input-group > .form-control + .custom-select,
-.input-group > .form-control + .custom-file,
-.input-group > .form-control-plaintext + .form-control,
-.input-group > .form-control-plaintext + .custom-select,
-.input-group > .form-control-plaintext + .custom-file,
-.input-group > .custom-select + .form-control,
+.input-group > .form-control2 + .form-control2,
+.input-group > .form-control2 + .custom-select,
+.input-group > .form-control2 + .custom-file,
+.input-group > .form-control2-plaintext + .form-control2,
+.input-group > .form-control2-plaintext + .custom-select,
+.input-group > .form-control2-plaintext + .custom-file,
+.input-group > .custom-select + .form-control2,
 .input-group > .custom-select + .custom-select,
 .input-group > .custom-select + .custom-file,
-.input-group > .custom-file + .form-control,
+.input-group > .custom-file + .form-control2,
 .input-group > .custom-file + .custom-select,
 .input-group > .custom-file + .custom-file {
     margin-left: -1px; }
-.input-group > .form-control:focus,
+.input-group > .form-control2:focus,
 .input-group > .custom-select:focus,
 .input-group > .custom-file .custom-file-input:focus ~ .custom-file-label {
     z-index: 3; }
 .input-group > .custom-file .custom-file-input:focus {
     z-index: 4; }
-.input-group > .form-control:not(:last-child),
+.input-group > .form-control2:not(:last-child),
 .input-group > .custom-select:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0; }
-.input-group > .form-control:not(:first-child),
+.input-group > .form-control2:not(:first-child),
 .input-group > .custom-select:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
@@ -2938,11 +2942,11 @@ input[type="button"].btn-block {
 .input-group-text input[type="checkbox"] {
     margin-top: 0; }
 
-.input-group-lg > .form-control:not(textarea),
+.input-group-lg > .form-control2:not(textarea),
 .input-group-lg > .custom-select {
     height: calc(1.5em + 1rem + 2px); }
 
-.input-group-lg > .form-control,
+.input-group-lg > .form-control2,
 .input-group-lg > .custom-select,
 .input-group-lg > .input-group-prepend > .input-group-text,
 .input-group-lg > .input-group-append > .input-group-text,
@@ -2953,11 +2957,11 @@ input[type="button"].btn-block {
     line-height: 1.5;
     border-radius: 0.3rem; }
 
-.input-group-sm > .form-control:not(textarea),
+.input-group-sm > .form-control2:not(textarea),
 .input-group-sm > .custom-select {
     height: calc(1.5em + 0.5rem + 2px); }
 
-.input-group-sm > .form-control,
+.input-group-sm > .form-control2,
 .input-group-sm > .custom-select,
 .input-group-sm > .input-group-prepend > .input-group-text,
 .input-group-sm > .input-group-append > .input-group-text,
@@ -8225,7 +8229,7 @@ h1, h2, h3, h4, h5,
 .form-group a {
     color: gray; }
 
-.form-control {
+.form-control2 {
     height: 48px;
     background: rgba(0, 0, 0, 0.05);
     color: #000;
@@ -8240,23 +8244,23 @@ h1, h2, h3, h4, h5,
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out; }
 @media (prefers-reduced-motion: reduce) {
-    .form-control {
+    .form-control2 {
         -webkit-transition: none;
         -o-transition: none;
         transition: none; } }
-.form-control::-webkit-input-placeholder {
+.form-control2::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
     color: rgba(0, 0, 0, 0.2) !important; }
-.form-control::-moz-placeholder {
+.form-control2::-moz-placeholder {
     /* Firefox 19+ */
     color: rgba(0, 0, 0, 0.2) !important; }
-.form-control:-ms-input-placeholder {
+.form-control2:-ms-input-placeholder {
     /* IE 10+ */
     color: rgba(0, 0, 0, 0.2) !important; }
-.form-control:-moz-placeholder {
+.form-control2:-moz-placeholder {
     /* Firefox 18- */
     color: rgba(0, 0, 0, 0.2) !important; }
-.form-control:focus, .form-control:active {
+.form-control2:focus, .form-control2:active {
     outline: none !important;
     -webkit-box-shadow: none;
     box-shadow: none;
