--- a/src/main/resources/static/css/mainMap.css
+++ b/src/main/resources/static/css/mainMap.css
@@ -15,3 +15,16 @@
 .section{
     width: 100%;
 }
+.infoWin{
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left:5px;
+    padding-right:5px;
+    color:white;
+    text-align:center;
+    border:1px solid #a09b07;
+    border-radius:14px;
+    opacity:75%
+
+
+}
