햔재위치 이동

--- a/src/main/resources/static/css/mainMap.css
+++ b/src/main/resources/static/css/mainMap.css
@@ -1,5 +1,5 @@
 #map {
-    z-index: 1;
+    z-index: 0;
     width: 2559px;
     height: 100%;
     position: relative;
@@ -7,7 +7,7 @@
 #grid{
     /*border:5px solid pink;*/
     display: grid;
-    grid-template-columns: 100px 400px 2059px 1fr; /*오름차순으로 설정, 이순서는 html에 선언된 순서대로 적용됨*/
+    grid-template-columns:  100px 2fr 1fr 1px; /*오름차순으로 설정, 이순서는 html에 선언된 순서대로 적용됨100px 400px  2059px 1fr  100px 400px  2059px 0.1fr 1fr*/
     margin: 0px;
     width: 100%;
     height: 100%;
@@ -28,3 +28,11 @@
 
 
 }
+#nowLo{
+    z-index: 3001;
+    width: 60px;
+    height: 35px;
+    order: 1;
+    position: relative;
+}
+#sub{ display:grid;order: 2;grid-template-rows:  1fr 0.1fr;}
