--- a/src/main/resources/static/css/mainSub.css
+++ b/src/main/resources/static/css/mainSub.css
@@ -39,6 +39,12 @@
 }
 .story-ul {
     background-color: #FFFFFF;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    width: 360px;
+
+    border-radius: 10px;
 }
