--- a/src/main/resources/static/css/mainMap.css
+++ b/src/main/resources/static/css/mainMap.css
@@ -59,7 +59,7 @@
 .LeftForm{
     /*background-color: #6E6E6E;*/
     opacity: 80%;
-    margin: 10px;
+    /*margin: 7px;*/
 }
 .btn{
     width: auto;
