--- a/src/main/resources/static/css/mainSub.css
+++ b/src/main/resources/static/css/mainSub.css
@@ -38,13 +38,12 @@
     transform: translateX(0px);
 }
 .story-ul {
-    background-color: #FFFFFF;
     margin-top: 30px;
     margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
-
-    width: 360px;
+    height: 300px;
+    width: 355px;
 
     border-radius: 10px;
 }
